Bug fixing : write available/unavailable instead of true/false on the costume card + align right

--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -35,7 +35,7 @@
 .card-availability {
   position: absolute;
   bottom: 10px;
-  left: 10px;
+  right: 10px;
 }
 
 .card-link {
